Sat May 16 21:41:24 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* string.c: added documentation for character sequence \' with String#sub
	  [Bug #11132][ruby-core:69121][fix GH-900][ci skip] Patch by @shishir127

Sat May 16 21:38:05 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* enum.c: fix a sample code. Patch by @eagletmt
	  [fix GH-901][ci skip]

Sat May 16 21:17:11 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_data_object_wrap, rb_data_typed_object_wrap): rename
	  alloc as wrap.  these functions do not allocate data pointers
	  but just wrap the given pointers.

Sat May 16 19:59:24 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_accept): simplified.

Fri May 15 18:28:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_assoc, rb_ary_rassoc): [DOC] the result when key
	  was found is the existing element, not a new array.  reported by
	  Giau Nguyen <giaunv AT nustechnology.com>.

Fri May 15 08:24:28 2015  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/cookie.rb: Implement HttpOnly flag for cookies.
	  [fix GH-887] Patch by @martinpovolny

Fri May 15 06:54:19 2015  Aaron Patterson <tenderlove@ruby-lang.org>

	* variable.c: Change autoload to call `require` through Ruby rather
	  than directly calling `rb_require_safe`.  This allows things like
	  RubyGems to intercept file loading done though `autoload`.
	  [Feature #11140]

	* test/ruby/test_autoload.rb: Test for change.

Wed Apr  8 19:18:02 2015  Shota Fukumori (sora_h)  <her@sorah.jp>

	* enum.c (enum_grep_v, grep_i, grep_iter_i, Init_enum):
	  Implement Enumerable#grep_v. [Feature #11049]

Thu May 14 15:54:13 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/pathname/lib/pathname.rb: Remove condition of RUBY_VERSION <= 1.9.
	  [Feature #11082]

Wed May 13 17:10:37 2015  Masaki Matsushita <glass.saga@gmail.com>

	* enum.c (enum_to_a): revert r50457.
	  it requires recursion check.
	  then, it doesn't make performance improvement.